resolve tasks, implement tests